<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gray_fill_rounded_background"
    android:padding="20dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <!-- Checkmark Icon -->
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_tick_red"
            android:layout_marginBottom="16dp" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/great_your_password_has_been_changed"
            android:textColor="#9c162c"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9c162c"

            android:layout_marginBottom="10dp"/>

        <!-- Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/don_t_worry_we_ll_let_you_know_if_there_s_a_problem_with_your_account"
            android:textColor="#333333"
            android:textSize="16sp"
            android:gravity="center"

            android:layout_marginBottom="16dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLoginWithNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/red_rounded_background"
            android:padding="10dp"
            android:text="@string/login_with_new_password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#9c162c" />
    </LinearLayout>
</LinearLayout>